Squash DFPL2423 Other proceeding
commit 54664270d0738395e68c6237920e49072afaa206
Merge: 3250cd8af 0e4f82eaa
Author: Chak Shing Lo <95437003+chak-shing-lo-justice@users.noreply.github.com>
Date:   Wed May 7 09:59:34 2025 +0100

    Merge branch 'master' into DFPL-2423

commit 3250cd8af6ac830d385db57a34fd4699b15b5fc6
Author: Chak Shing, Lo <ChakShing.Lo@justice.gov.uk>
Date:   Tue May 6 18:09:31 2025 +0100

    Update MigrateCaseServiceTest.java

commit 80c70870c00651d8043bf2494bc992864aa1fd47
Author: Chak Shing, Lo <ChakShing.Lo@justice.gov.uk>
Date:   Tue May 6 17:46:43 2025 +0100

    git rollback script

commit 574eef7f5328135c15ba0c60bb2b27a4e0b05306
Merge: d30ab483f 28c19e1c2
Author: Chak Shing, Lo <ChakShing.Lo@justice.gov.uk>
Date:   Tue May 6 17:01:33 2025 +0100

    Merge branch 'master' into DFPL-2423

commit d30ab483f3c0e5bc0a4959b70379eff2f6c8baa4
Author: prabhamuthu15 <78162288+prabhamuthu15@users.noreply.github.com>
Date:   Mon Mar 24 17:46:02 2025 +0000

    Dfpl 2423 UI test (#5907)

    * OtherProceedingUI Test

    * otherProceedings UITest

commit fbfe649d9646c907123de2e5d93649c1dc74e391
Author: Chak Shing, Lo <ChakShing.Lo@justice.gov.uk>
Date:   Mon Mar 24 16:12:04 2025 +0000

    Update DocmosisTemplates.java

commit 9325e4c949f0e2026db8a34e3620f86d2b922a23
Merge: 8cbd8d883 994bf215b
Author: Chak Shing, Lo <ChakShing.Lo@justice.gov.uk>
Date:   Thu Mar 20 14:21:07 2025 +0000

    Merge branch 'DFPL-2423' of https://github.com/hmcts/fpl-ccd-configuration into DFPL-2423

commit 8cbd8d88341b58f3669bca0291adbc8365b7a410
Author: Chak Shing, Lo <ChakShing.Lo@justice.gov.uk>
Date:   Thu Mar 20 14:20:58 2025 +0000

    update label

commit 994bf215bad6845d788656af24ca30e9ebac36f9
Merge: 4e8e01ddf 30b34f55a
Author: prabhamuthu15 <78162288+prabhamuthu15@users.noreply.github.com>
Date:   Thu Mar 20 14:06:09 2025 +0000

    Merge branch 'master' into DFPL-2423

commit 4e8e01ddf8ad443bad124d650e9a2f4a6737a972
Author: Chak Shing, Lo <ChakShing.Lo@justice.gov.u